Finish project with jwt security
